[package]
name = "adb-server-tokio"
version = "0.0.2"
edition = "2021"
description = "A Rust implementation of the Android Debug Bridge (ADB) server protocol."
authors = ["Andreas Lüdeke <andreas@devicelink.app>"]
license = "MIT"
keywords = ["adb", "android", "debug", "bridge", "tokio"]
categories = ["development-tools::debugging", "development-tools::testing"]
repository = "https://github.com/devicelink/adb-server-tokio"

[lib]
name = "adb_server_tokio"
path = "src/lib.rs"

[dependencies]
bytes = "1.6.0"
futures = "0.3.30"
pretty-hex = "0.4.1"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["macros"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
